--- a/index.html
+++ b/index.html
@@ -4,11 +4,36 @@
 	<meta charset="utf-8">
 	<title>Pagina de Links
 	</title>
+	<style type="text/css">
+	h1/*seletor*/ {
+		color: red;
+	}
+	h2 /*seletor*/ {
+		color: blue;
+	}
+	p, h1, h2, h3, h4{
+		text-align: center;
+		text-decoration: underline;
+		font-size: 25px;
+		font-style: italic;
+		font-weight: bold;
+		font-family: verdana, times, calibri;
+		margin: 60px 30px 50px 30px;
+	}
+	#p2{
+		color: orange;
+	}
+
+	</style>
 
 </head>
 <body bgcolor="#B0C4DE">
-	<center>
-	<h1>Luiz Felipe Lisboa</h1>
+	<p id="p1">Texto Qualquer</p>
+	<p id="p2">Mais um Texto Qualquer</p>
+	<h1 >Luiz Felipe Lisboa</h1>
+	<h2 >Universidade Técnologica Federal do Paraná</h2>
+	<h2>Tecnologia em Sistemas Para Internet</h2>
+	<h3>Segundo Período</h3>
 
 	<a href="atividades.html" target="principal" title="Dica de direção do link"> Atividades</a>
 	&nbsp&nbsp
